--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "device-checker",
   "version": "0.1.0",
+  "homepage": "https://iskako01.github.io/DeviceChecker/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -36,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"predeploy": "npm run build",
+	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "4.0.0",
     "typings-for-css-modules-loader": "1.7.0"
   }
 }
